--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
       dockerfile: Dockerfile
     container_name: php-apache-edu
     ports:
-      - 8086:80
+      - 8090:80
     depends_on:
-      - mysqlbdcli
+      - mysqlbd-edu
     restart: always
     environment:
       VIRTUAL_HOST: ${VIRTUAL_HOST}
@@ -37,22 +37,22 @@ services:
       - MYSQL_USER=${MYSQL_USER}
       - MYSQL_PASSWORD=${MYSQL_PASSWORD}
     ports:
-      - "9001:3306"
+      - "9002:3306"
     volumes:
     # Montamos un volumen para MySQL para no perder los datos de bd
-    - dbdats:/var/lib/mysql
+    - dbdatsedu:/var/lib/mysql
 # phpmyadmin configuration
   phpmyadmin-edu:
     image: phpmyadmin/phpmyadmin
     container_name: phpmyadmincli
     restart: always
     ports:
-      - 8085:80
+      - 8091:80
     environment:
       - PMA_ARBITRARY=1
       - PMA_HOST=${MYSQL_HOST}  
     depends_on:
-      - mysqlbdcli
+      - mysqlbd-edu
 volumes:
   dbdatsedu:
 
