--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ MYSQL_HOST=mysqleducalma
 MYSQL_DATABASE=test
 MYSQL_ROOT_USER=992086412
 MYSQL_ROOT_PASSWORD=WxUWZaB#ee@U
-MYSQL_USER=dev
-MYSQL_PASSWORD=dev
+MYSQL_USER=992086412
+MYSQL_PASSWORD=WxUWZaB#ee@U
