--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     ports:
       - 8093
     environment:
-      PMA_HOST: mysql
+      PMA_HOST: ${MYSQL_HOST}
       UPLOAD_LIMIT: 512M
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
