--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 MYSQL_VERSION=8.0.21
 MYSQL_HOST=mysqleducalma
 MYSQL_DATABASE=test
-MYSQL_ROOT_USER=root
-MYSQL_ROOT_PASSWORD=root
+MYSQL_ROOT_USER=roots
+MYSQL_ROOT_PASSWORD=roots
 MYSQL_USER=dev
 MYSQL_PASSWORD=dev
